changes site description

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -4,7 +4,7 @@
 			<a href="{{ .Site.BaseURL }}"><h1 class="brand">{{ .Site.Title }}</h1></a>
 			{{ with .Site.Params.authorimage }} <img src="{{.}}" alt="Author Image" class="img-circle headshot center"> {{ end }}
 			<p class="lead">
-				{{ with .Site.Params.description }} {{.}} {{ else }} Inconspicuous black person {{end}}
+				{{ with .Site.Params.description }} {{.}} {{ else }} Leader in the making {{end}}
 			</p>
 			<a href="http://www.twitter.com"><i class="fab fa-twitter-square fa-lg"></i></a>
 			<a href="http://www.instagram.com"><i class="fab fa-instagram fa-lg"></i></a>
