--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -16,7 +16,7 @@
 		{{ partial "sidebar_social.html" . }}
         </p>
 		<p class="copyright">{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{ now.Format "2006"}} {{.Site.Params.author}}.
-        <a href="https://creativecommons.org/licenses/by/4.0">Some Rights Reserved</a>.<br/>Built with <a href="https://gohugo.io/">Hugo</a>{{end}}
+        All Rights Reserved.<br/>Built with <a href="https://gohugo.io/">Hugo</a>{{end}}
         </p>
 	</div>
 	<div>
