--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -6,10 +6,8 @@
 			<p class="lead">
 				{{ with .Site.Params.description }} {{.}} {{ else }} Leader in the making {{end}}
 			</p>
-			<a href="http://www.twitter.com"><i class="fab fa-twitter-square fa-lg"></i></a>
-			<a href="http://www.instagram.com"><i class="fab fa-instagram fa-lg"></i></a>
-			<a href="http://www.youtube.com"><i class="fab fa-youtube-square fa-lg"></i></a>
-			<a href="http://www.soundcloud.com"><i class="fab fa-soundcloud fa-lg"></i></a>
+			<a href="http://www.twitter.com/M0Sharif"><i class="fab fa-twitter-square fa-lg"></i></a>
+			<a href="http://www.instagram.com/M0Sharif"><i class="fab fa-instagram fa-lg"></i></a>
 		</div>
 		{{ partial "sidebar_menu.html" . }}
         <p>
