changes social links

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -8,6 +8,8 @@
 			</p>
 			<a href="http://www.twitter.com/M0Sharif"><i class="fab fa-twitter-square fa-lg"></i></a>
 			<a href="http://www.instagram.com/M0Sharif"><i class="fab fa-instagram fa-lg"></i></a>
+			<a href="http://www.linkedin.com/in/mohamed-sharif-60b073ab"><i class="fab fa-linkedin"></i></a>
+			<a href="http://www.github.com/M0Sharif"><i class="fab fa-github-square"></i></a>
 		</div>
 		{{ partial "sidebar_menu.html" . }}
         <p>
